--- a/checkout-revamp.html
+++ b/checkout-revamp.html
@@ -38,7 +38,7 @@
 				<div class="row justify-content-center no-gutters">
 					<div class="col-xl-10">
 
-						<div class="row justify-content-center no-gutters progress-wrapper-2 progress-wrapper-3 progress-wrapper-4 step-1-active step-2-active">
+						<div class="row justify-content-center no-gutters progress-wrapper-2 progress-wrapper-3 progress-wrapper-5 step-1-active">
 							<div class="col-md-6 col-lg-5">
 								<div class="progress">
 									<div class="progress-bar bg-success"></div>
@@ -54,150 +54,223 @@
 							</div>
 						</div>
 
-						<div class="row text-gray">
+						<div class="card card-3 no-card">
 
-							<div class="col-lg-5 mb-3">
-								<div class="card card-3 card-steps-2">
-									<div class="fz-18 text-black font-weight-bold mb-4 pb-3">
-										<span class="step step-11">3</span> <span class="align-middle">Secure Checkout</span>
-									</div>
-									<div class="green-block green-block-2 green-block-3 green-block-4">
-										<div class="yellow-header text-center">
-											<img src="img/arrow-thick-right.svg" alt="">
-											<div class="custom-control custom-checkbox d-inline-block text-black font-weight-bold ml-1">
-											  <input type="checkbox" class="custom-control-input" id="checkbox">
-											  <label class="custom-control-label" for="checkbox">Yes, Improve My Health Faster!</label>
-											</div>
-										</div>
-										<p><b class="text-danger-2">ONE TIME OFFER:</b> Want to improve your immunity faster at home? Your personalized reports and recommendations are guaranteed to optimize your immunity fast and help you stay safe and protected at home.</p>
-										<div>Check the box now to unlock 6 reports for just <span class="text-line">$200</span> <b>$49</b>! (This offer is not available at ANY other time or place.)</div>
-									</div>
-									<div class="dashboard-content fz-16">
-										<div class="mb-1">Card Number*</div>
-										<div class="form-group mb-3">
-											<input type="text" class="form-control" placeholder="5500 0000 0000 0004">
-										</div>
-										<div class="text-center py-3 mb-3">
-											<img src="img/revamp/pay.svg" alt="">
-										</div>
-										<div class="form-row pt-1">
-											<div class="col-sm">
-												<div class="mb-1">Expiration*</div>
-												<div class="form-row">
-													<div class="col-6 form-group mb-3">
-														<select class="form-control">
-															<option value="1">08</option>
-															<option value="2">09</option>
-														</select>
+							<div class="step-1">
+								<div class="row justify-content-center no-gutters">
+									<div class="col-lg-11 col-xl-10">
+										<div class="card card-3 card-steps">
+											<div class="row">
+												<div class="col-md-6">
+													<div class="fz-16 text-black mb-4">
+														<span class="step">1</span> <span class="align-middle">Basic Information</span>
 													</div>
-													<div class="col-6 form-group mb-3">
-														<select class="form-control">
-															<option value="1">2025</option>
-															<option value="2">2026</option>
-														</select>
+													<div class="form-row">
+														<div class="col form-group mb-3">
+															<input type="text" class="form-control" placeholder="First Name">
+														</div>
+														<div class="col form-group mb-3">
+															<input type="text" class="form-control" placeholder="Last Name">
+														</div>
+													</div>
+													<div class="form-group mb-3">
+														<input type="email" class="form-control" placeholder="Email">
+													</div>
+													<div class="form-group mb-3">
+														<div class="input-password">
+															<input type="password" class="form-control" placeholder="Password">
+															<img src="img/password.svg" alt="" class="img-password">
+														</div>
+													</div>
+													<p class="text-gray my-2">For quality assurance, please select your gender</p>
+													<div class="form-row">
+														<div class="col-6 form-group mb-3">
+															<select class="form-control">
+																<option value="1">Male</option>
+																<option value="2">Female</option>
+															</select>
+														</div>
+													</div>
+													<hr class="d-md-none">
+												</div>
+												<div class="col-md-6 mt-3 mt-md-0">
+													<div class="fz-16 text-black mb-4"><span class="step">2</span> <span class="align-middle">Billing Address</span></div>
+													<div class="form-group mb-3">
+														<input type="text" class="form-control" placeholder="Hawaii">
+													</div>
+													<div class="form-group mb-3">
+														<input type="text" class="form-control" placeholder="City">
+													</div>
+													<div class="form-row">
+														<div class="col form-group mb-3">
+															<select class="form-control">
+																<option value="1" checked="">United States</option>
+																<option value="2">Ukraine</option>
+															</select>
+														</div>
+														<div class="col form-group mb-3">
+															<input type="text" class="form-control" placeholder="Zip">
+														</div>
 													</div>
 												</div>
 											</div>
-											<div class="col-sm-4 form-group">
-												<div class="mb-1">CVC*</div>
-												<input type="text" class="form-control" placeholder="547">
+											<hr class="d-none d-md-block my-2">
+											<div class="row justify-content-end pt-2 pt-md-3">
+												<div class="col-md-6">
+													<button class="btn btn-success btn-block font-weight-normal py-2" id="step-2">GO TO NEXT STEP</button>
+												</div>
 											</div>
 										</div>
-									</div>
-									<div class="text-center pt-3">
-										<p class="fz-16 font-weight-bold mb-1"><img src="img/revamp/lock.svg" alt="" class="mr-2"> <span class="align-middle">Secure Credit Card Payment</span></p>
-										<p class="pb-2">This is a secure 128-bit SSL-encrypted payment.</p>
-										<button class="btn btn-try btn-try3 btn-block font-weight-bold fz-16"><span class="mx-auto">Place Order</span></button>
-										<div class="my-3">Or</div>
-										<button class="btn btn-paypal btn-block"><img src="img/revamp/paypal.svg" alt=""></button>
-										<button class="btn btn-apple btn-block fz-16 font-weight-bold mt-3"><span class="align-middle mr-1">Pay with</span> <img src="img/revamp/apple.svg" alt=""></button>
 									</div>
 								</div>
 							</div>
 
-							<div class="col-lg-7 mt-3 mt-md-0">
-								<div class="card card-3 card-steps-3">
-									<div class="form-row align-items-center">
-										<div class="col-sm fz-18 text-black font-weight-bold">
-											<span class="step step-11">4</span> <span class="align-middle">Cart Summary</span>
-										</div>
-										<div class="col-sm-auto text-right mt-3 mt-sm-0">
-											<img src="img/revamp/secure.svg" alt="">
-										</div>
-									</div>
-									<div class="img-bacg">
-										<img src="img/revamp/img.png" alt="">
-									</div>
-									<div class="form-row fz-13 text-black">
-										<div class="col-sm">
-											<ul class="list-check list-check-2 pb-0">
-												<li class="mb-2">Risk & Susceptibility For Infection</li>
-												<li class="mb-2">Severity of Symptoms</li>
-												<li class="mb-2">Reaction to COVID-19 Medications</li>
-												<li class="mb-2">Better Health & Immunity</li>
-											</ul>
-										</div>
-										<div class="col-sm">
-											<ul class="list-check list-check-2 pb-0">
-												<li class="mb-2">Vitamin Recommendations</li>
-												<li class="mb-2">Smarter Strategies</li>
-												<li class="mb-2">Reduce Risks</li>
-												<li class="mb-2">Easy Tips</li>
-											</ul>
-										</div>
-									</div>
-									<hr class="hr my-4">
-									<div class="text-black text-center pt-2">
-										<p class="fz-20 font-weight-bold mb-2">LifeDNA COVID-19 Pack</p>
-										<p class="bg-bg fz-45 text-black pt-2"><span class="text-line">$99</span> $49</p>
-									</div>
-									<hr class="hr mt-4">
-									<div class="form-row fz-16 py-2">
-										<div class="col">
-											<div class="py-2">LifeDNA COVID-19 Pack</div>
-											<div class="py-2 text-black font-weight-bold">Total</div>
-										</div>
-										<div class="col-auto">
-											<div class="py-2">$49</div>
-											<div class="py-2 text-black font-weight-bold">$49</div>
-										</div>
-									</div>
-									<div class="dashboard-content form-row py-2">
-										<div class="col">
-											<input type="text" class="form-control" placeholder="Coupon">
-										</div>
-										<div class="col-auto col-sm-5">
-											<button class="btn btn-outline-success btn-block text-success-2 h-100">Apply</button>
-										</div>
-									</div>
-									<div class="pt-4 mt-3 mb-3 pb-3">
-										<img src="img/revamp/trustpilot.svg" alt="" class="mr-3">
-										<img src="img/revamp/star.svg" alt="" class="mt-2">
-										<img src="img/revamp/star.svg" alt="" class="mt-2">
-										<img src="img/revamp/star.svg" alt="" class="mt-2">
-										<img src="img/revamp/star.svg" alt="" class="mt-2">
-										<img src="img/revamp/star.svg" alt="" class="mt-2">
-									</div>
-									<p class="fz-16 text-black font-weight-bold mb-2">LifeDNA results let you navigate your health</p>
-									<p>It was quite interesting and intriguing! I have followed my health and vitamin levels for quite some time as I heal myself naturally with my diet and supplements and the DNA results were spot on. Our bodies are incredible machines and our DNA is like repair manual lol. LifeDNA has so many great tests that can reveal so much to help us navigate our health, I would highly recommend.</p>
-									<div class="form-row align-items-center pt-2">
-										<div class="col-auto">
-											<span class="avatar avatar-md" style="background-image: url(img/avatar.png)"></span>
-										</div>
-										<div class="col">
-											<b class="text-black">Kim Morgan</b>
+							<div class="step-2">
+								<div class="row text-gray">
+									<div class="col-lg-5 mb-3">
+										<div class="card card-3 card-steps-2">
+											<div class="fz-18 text-black font-weight-bold mb-4 pb-3">
+												<span class="step step-11">3</span> <span class="align-middle">Secure Checkout</span>
+											</div>
+											<div class="green-block green-block-2 green-block-3 green-block-4">
+												<div class="yellow-header text-center">
+													<img src="img/arrow-thick-right.svg" alt="">
+													<div class="custom-control custom-checkbox d-inline-block text-black font-weight-bold ml-1">
+													  <input type="checkbox" class="custom-control-input" id="checkbox">
+													  <label class="custom-control-label" for="checkbox">Yes, Improve My Health Faster!</label>
+													</div>
+												</div>
+												<p><b class="text-danger-2">ONE TIME OFFER:</b> Want to improve your immunity faster at home? Your personalized reports and recommendations are guaranteed to optimize your immunity fast and help you stay safe and protected at home.</p>
+												<div>Check the box now to unlock 6 reports for just <span class="text-line">$200</span> <b>$49</b>! (This offer is not available at ANY other time or place.)</div>
+											</div>
+											<div class="dashboard-content fz-16">
+												<div class="mb-1">Card Number*</div>
+												<div class="form-group mb-3">
+													<input type="text" class="form-control" placeholder="5500 0000 0000 0004">
+												</div>
+												<div class="text-center py-3 mb-3">
+													<img src="img/revamp/pay.svg" alt="">
+												</div>
+												<div class="form-row pt-1">
+													<div class="col-sm">
+														<div class="mb-1">Expiration*</div>
+														<div class="form-row">
+															<div class="col-6 form-group mb-3">
+																<select class="form-control">
+																	<option value="1">08</option>
+																	<option value="2">09</option>
+																</select>
+															</div>
+															<div class="col-6 form-group mb-3">
+																<select class="form-control">
+																	<option value="1">2025</option>
+																	<option value="2">2026</option>
+																</select>
+															</div>
+														</div>
+													</div>
+													<div class="col-sm-4 form-group">
+														<div class="mb-1">CVC*</div>
+														<input type="text" class="form-control" placeholder="547">
+													</div>
+												</div>
+											</div>
+											<div class="text-center pt-3">
+												<p class="fz-16 font-weight-bold mb-1"><img src="img/revamp/lock.svg" alt="" class="mr-2"> <span class="align-middle">Secure Credit Card Payment</span></p>
+												<p class="pb-2">This is a secure 128-bit SSL-encrypted payment.</p>
+												<button class="btn btn-try btn-try3 btn-block font-weight-bold fz-16"><span class="mx-auto">Place Order</span></button>
+												<div class="my-3">Or</div>
+												<button class="btn btn-paypal btn-block"><img src="img/revamp/paypal.svg" alt=""></button>
+												<button class="btn btn-apple btn-block fz-16 font-weight-bold mt-3"><span class="align-middle mr-1">Pay with</span> <img src="img/revamp/apple.svg" alt=""></button>
+											</div>
 										</div>
 									</div>
-									<hr class="hr mt-4">
-									<div class="text-center pt-3">
-										<img src="img/l-1.svg" alt="" class="mx-1 mx-lg-2 mb-2">
-										<img src="img/l-2.svg" alt="" class="mx-1 mx-lg-2 mb-2">
-										<img src="img/revamp/secure.svg" alt="" class="mx-1 mx-lg-2 mb-2">
+									<div class="col-lg-7 mt-3 mt-md-0">
+										<div class="card card-3 card-steps-3">
+											<div class="form-row align-items-center">
+												<div class="col-sm fz-18 text-black font-weight-bold">
+													<span class="step step-11">4</span> <span class="align-middle">Cart Summary</span>
+												</div>
+												<div class="col-sm-auto text-right mt-3 mt-sm-0">
+													<img src="img/revamp/secure.svg" alt="">
+												</div>
+											</div>
+											<div class="img-bacg">
+												<img src="img/revamp/img.png" alt="">
+											</div>
+											<div class="form-row fz-13 text-black">
+												<div class="col-sm">
+													<ul class="list-check list-check-2 pb-0">
+														<li class="mb-2">Risk & Susceptibility For Infection</li>
+														<li class="mb-2">Severity of Symptoms</li>
+														<li class="mb-2">Reaction to COVID-19 Medications</li>
+														<li class="mb-2">Better Health & Immunity</li>
+													</ul>
+												</div>
+												<div class="col-sm">
+													<ul class="list-check list-check-2 pb-0">
+														<li class="mb-2">Vitamin Recommendations</li>
+														<li class="mb-2">Smarter Strategies</li>
+														<li class="mb-2">Reduce Risks</li>
+														<li class="mb-2">Easy Tips</li>
+													</ul>
+												</div>
+											</div>
+											<hr class="hr my-4">
+											<div class="text-black text-center pt-2">
+												<p class="fz-20 font-weight-bold mb-2">LifeDNA COVID-19 Pack</p>
+												<p class="bg-bg fz-45 text-black pt-2"><span class="text-line">$99</span> $49</p>
+											</div>
+											<hr class="hr mt-4">
+											<div class="form-row fz-16 py-2">
+												<div class="col">
+													<div class="py-2">LifeDNA COVID-19 Pack</div>
+													<div class="py-2 text-black font-weight-bold">Total</div>
+												</div>
+												<div class="col-auto">
+													<div class="py-2">$49</div>
+													<div class="py-2 text-black font-weight-bold">$49</div>
+												</div>
+											</div>
+											<div class="dashboard-content form-row py-2">
+												<div class="col">
+													<input type="text" class="form-control" placeholder="Coupon">
+												</div>
+												<div class="col-auto col-sm-5">
+													<button class="btn btn-outline-success btn-block text-success-2 h-100">Apply</button>
+												</div>
+											</div>
+											<div class="pt-4 mt-3 mb-3 pb-3">
+												<img src="img/revamp/trustpilot.svg" alt="" class="mr-3">
+												<img src="img/revamp/star.svg" alt="" class="mt-2">
+												<img src="img/revamp/star.svg" alt="" class="mt-2">
+												<img src="img/revamp/star.svg" alt="" class="mt-2">
+												<img src="img/revamp/star.svg" alt="" class="mt-2">
+												<img src="img/revamp/star.svg" alt="" class="mt-2">
+											</div>
+											<p class="fz-16 text-black font-weight-bold mb-2">LifeDNA results let you navigate your health</p>
+											<p>It was quite interesting and intriguing! I have followed my health and vitamin levels for quite some time as I heal myself naturally with my diet and supplements and the DNA results were spot on. Our bodies are incredible machines and our DNA is like repair manual lol. LifeDNA has so many great tests that can reveal so much to help us navigate our health, I would highly recommend.</p>
+											<div class="form-row align-items-center pt-2">
+												<div class="col-auto">
+													<span class="avatar avatar-md" style="background-image: url(img/avatar.png)"></span>
+												</div>
+												<div class="col">
+													<b class="text-black">Kim Morgan</b>
+												</div>
+											</div>
+											<hr class="hr mt-4">
+											<div class="text-center pt-3">
+												<img src="img/l-1.svg" alt="" class="mx-1 mx-lg-2 mb-2">
+												<img src="img/l-2.svg" alt="" class="mx-1 mx-lg-2 mb-2">
+												<img src="img/revamp/secure.svg" alt="" class="mx-1 mx-lg-2 mb-2">
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
 
 						</div>
+
 					</div>
 				</div>
 			</div>
